[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physioclr"
version = "0.1.0"
description = "PhysioCLR: Physiology-aware self-supervised learning for ECG (fairseq-signals user module)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "torch",
    "wfdb",
    "neurokit2",
    "pyyaml"
]

[tool.setuptools]
packages = ["physioclr_ext"]
